//package MsgClientLogin;
package msg;
import "define.proto";

// 客户端请求登陆
message C2L_ReqLogin {
    optional string account = 1;
    optional string nickname = 2;
    optional string face = 3;
    optional string token = 4;
    //optional string passwd  = 2;
    //optional string token   = 3;
    //optional string token = 1;
}


// 返回登陆验证结果
message L2C_RetLogin {
    optional int32  result = 1;     // 0失败，1成功
    optional string reason = 2;     // 失败原因
    optional msg.IpHost gatehost = 3;
    optional string verifykey = 5;  // 客户端使用这个key登陆网关
}


// 注册账户，暂时方案
message C2L_ReqRegistAccount {
    optional string account     = 1;
    optional string passwd      = 2;
    optional string name        = 3;
    optional string face        = 4; 
}


// 注册返回
message L2C_RetRegistAccount {
    optional string account = 1;
    optional string errcode = 2;
}


